--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url('../node_modules/bootstrap/dist/css/bootstrap.min.css');
 
+@import "bootstrap-icons/font/bootstrap-icons.css";
+
 /*:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
